fix(Flow): fix misaligned timeline items when truncated.

--- a/src/app/modules/flow/layout/timeline/flow-timeline.component.scss
+++ b/src/app/modules/flow/layout/timeline/flow-timeline.component.scss
@@ -47,6 +47,7 @@
     &__icon {
       font-size: 24px;
       width: 84px;
+      min-width: 84px;
       text-align: center;
       line-height: 76px;
 
